<resources>
    <string name="app_name">AnaokuluOtomasyonu</string>
    <string name="title_activity_mudur__giris">Mudur_Giris</string>
    <string name="title_activity_ogretmen__giris_">Ogretmen_Giris_Activity</string>

    <string name="create_new_account">YENİ HESAP OLUŞTUR</string>
    <string name="i_have_account">HESABIM VAR</string>
    <string name="userName">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account_lower">Yeni Hesap Oluştur</string>
    <string name="create_account">HESAP OLUŞTUR</string>
    <string name="login_with_your_account">Hesabınızla Giriş Yapınız</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="teachers">Öğretmen Girişi</string>
    <string name="manager">Müdür Giriş</string>
    <string name="teacher">Öğretmen Giriş</string>
    <string name="parent">Veli Giriş</string>
    <string name="school">ANAOKULUM</string>
    <string name="exit">Çıkış</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Çıkış Yap</string>
    <string name="manager_register">Müdür Kayıt</string>
    <string name="manager_Tc">TC No</string>
    <string name="manager_task">Görev</string>
    <string name="teacher_tc">Öğretmen Tc No</string>
    <string name="teacher_class">Öğretmen Sınıfı</string>
    <string name="add_student">Öğrenci Ekle</string>
    <string name="student_info">Öğrenci Bilgileri</string>
    <string name="parent_info">1. Veli Bilgileri</string>
    <string name="parent_info_2">2. Veli Bilgileri</string>
    <string name="parent_check">2. Veli var mı ?</string>
    <string name="parent_child_no">Öğrenci No</string>
    <string name="address">Adres</string>
    <string name="student_no">Öğrenci No</string>
    <string name="student_tc">Öğrenci TC No</string>
    <string name="parent_tc">Veli TC No</string>
    <string name="student_parent_1">Öğrenci Veli 1</string>
    <string name="student_parent_2">Öğrenci Veli 2</string>
    <string name="student_height">Öğrenci Boy</string>
    <string name="student_weight">Öğrenci Kilo</string>
    <string name="student_birthday">Öğrenci Doğum Günü</string>
    <string name="student_class">Öğrenci Sınıfı</string>
    <string name="student_teacher">Öğrencinin Öğretmeni</string>
    <string name="student_medicine">Öğrenci İlacı</string>
    <string name="add_student_parent_info">Öğrenci Veli Bilgileri</string>
    <string name="add_eat">Yemek Ekle / Düzenle </string>
    <string name="add_activity">Etkinlik Ekle / Düzenle</string>
    <string name="add_teacher">Öğretmen Ekle</string>
    <string name="family">aile</string>
    <string name="email_manager">müdür email</string>
    <string name="password_manager">müdür sifre</string>
    <string name="list">Öğretmenleri Listele / Düzenle </string>
    <string name="student_list">Öğrenci Listesi</string>
    <string name="name">Adı</string>
    <string name="surname">Soyadı</string>
    <string name="student_name">Öğrencinin Adı</string>
    <string name="student_surname">Öğrencinin Soyadı</string>
    <string name="tel">Telefon Numarası</string>
    <string name="passwordd">Şifre</string>
    <string name="add_event">Etkinlik Ekle</string>
    <string name="event_name">Etkinlik Adı</string>
    <string name="event_date">Etkinlik Tarihi</string>
    <string name="event_describe">Etkinlik Açıklaması</string>
    <string name="teacher_menu">Öğretmen Menü</string>
    <string name="food_list">Yemek Listesi</string>
    <string name="days">Günü Seçiniz :</string>
    <string name="food1">Yemek 1 :</string>
    <string name="food2">Yemek 2 :</string>
    <string name="fruit">Meyve :</string>
    <string name="drink">İçecek :</string>
    <string name="save">Kaydet</string>
    <string name="edit">Düzenle</string>
    <string name="events">Etkinlikler</string>
    <string name="event_update">Etkinlik Güncelle</string>
    <string name="parent_menu">Veli Menü</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="yemek_listesini_goster">Yemek Listesini Göster</string>
    <string name="teacher_name">Öğretmen Adı</string>
    <string name="teacher_surname">Öğretmen Soyadı</string>
    <string name="teacher_phone">Öğretmen Telefon Numarası</string>
    <string name="teacher_mail">Öğretmen Email</string>
    <string name="teacher_password">Öğretmen Şifre</string>
    <string name="teacher_update">Öğretmen Güncelle</string>
    <string name="teacher_edit">Öğretmen Bilgileri Düzenle</string>
    <string name="student_edit">Öğrenci Bilgileri Düzenle</string>
    <string name="student_update">Öğrenci Güncelle</string>
    <string name="parent_list">Veli Listesi</string>
    <string name="parent_edit">Veli Düzenle</string>
    <string name="parent_name">Veli Adı</string>
    <string name="parent_surname">Veli Soyadı</string>
    <string name="parent_phone">Veli Telefon</string>
    <string name="parent_Email">Veli Email</string>
    <string name="parent_Address">Veli Adres</string>
    <string name="parent_Child_Name">Veli Öğrenci Adı</string>
    <string name="parent_Child_Surame">Veli Öğrenci Soyadı</string>
    <string name="parent_update">Veli Güncelle</string>
    <string name="d_zenlemek_istedi_iniz_etkinli_i_se_iniz">Düzenlemek istediğiniz etkinliği seçiniz..</string>
</resources>

