<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ogrenci_Duzenle_Activity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>

    <TextView
        android:id="@+id/txtStudentEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/student_edit"
        android:textColor="@color/colorPrimary"
        android:textSize="13pt"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStudentEdit"
        android:padding="5dp"
        android:layout_marginLeft="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/txtStudentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtStudentSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_surname"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtStudentNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_no"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txtStudentTcNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_tc"
                android:maxLength="11"
                android:inputType="number"/>

            <EditText
                android:id="@+id/txtStudentParent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_parent_1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtStudentParent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_parent_2"
                android:maxLength="11"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtStudentHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_height"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtStudentWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_weight"
                android:maxLength="11"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtStudentBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_birthday"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtStudentClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_class"
                android:maxLength="11"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtStudentTeacher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_teacher"
                android:inputType="text"/>

            <EditText
                android:id="@+id/txtStudentMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/student_medicine"
                android:maxLength="11"
                android:inputType="text"/>

            <Button
                android:id="@+id/btnStudentUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/colorRedButton"
                android:text="@string/student_update"
                android:textSize="22dp"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>