<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Etkinlik_Ekle_Activity">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actionbarlogin"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="25dp">

        <EditText
            android:id="@+id/txtEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name"
            android:autofillHints="@string/event_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/event_date"
            android:autofillHints="@string/event_date"
            android:inputType="date"/>

        <EditText
            android:id="@+id/txtEventDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/event_describe"
            android:autofillHints="@string/event_describe"
            android:inputType="text"/>


        <Button
            android:id="@+id/btnAddEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_event"
            android:textSize="20dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnUpdateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorRedButton"
            android:text="@string/event_update"
            android:textSize="20dp"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>