<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">


    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/okul"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtWelcomeAppName"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:textSize="35sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/anasayfa"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_below="@+id/image"
        android:layout_marginTop="162dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mudur"
            style="@android:style/Animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@android:color/darker_gray"
            android:padding="9dp"
            android:text="@string/manager" />

        <Button
            android:id="@+id/ogretmen"
            style="@android:style/Animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/darker_gray"
            android:padding="9dp"
            android:text="@string/teacher" />

        <Button
            android:id="@+id/veli"
            style="@android:style/Animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:padding="9dp"
            android:text="@string/parent" />

    </LinearLayout>


</RelativeLayout>