<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Yemek_Listesi_Goruntule_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/actionbar_app" android:id="@+id/actionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtFoodList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/food_list"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_marginTop="65dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txtFoodList"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/txtDay"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/days"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spDay"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="170dp"/>

        <TextView
            android:id="@+id/txtFood1"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtDay"
            android:layout_marginTop="20dp"
            android:text="@string/food1"
            android:textColor="@color/colorBlack"
            android:textSize="11pt" />

        <TextView
            android:id="@+id/edttxtFood1"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/spDay"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="170dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txtFood2"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtFood1"
            android:text="@string/food2"
            android:textColor="@color/colorBlack"
            android:textSize="11pt"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/edttxtFood2"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_below="@+id/edttxtFood1"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="170dp"
            android:inputType="text"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txtFruit"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtFood2"
            android:text="@string/fruit"
            android:textColor="@color/colorBlack"
            android:textSize="11pt"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/edttxtFruit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/edttxtFood2"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="170dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/txtDrink"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@+id/txtFruit"
            android:text="@string/drink"
            android:textColor="@color/colorBlack"
            android:textSize="11pt"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/edttxtDrink"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/edttxtFruit"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="170dp"
            android:textSize="20dp"
            android:textColor="@color/colorBlack"/>

        <Button
            android:id="@+id/btnFoodList"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/edttxtDrink"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/yemek_listesini_goster"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>

    </RelativeLayout>

</RelativeLayout>